taskcar-motor-driver/build/log/idf_py_stderr_output_89794
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:7: warning: "CONFIG_LOG_MAXIMUM_LEVEL" redefined
    7 | #define CONFIG_LOG_MAXIMUM_LEVEL ESP_LOG_VERBOSE
      | 
In file included from /home/joagz/esp/esp-idf/components/newlib/platform_include/assert.h:12,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/sys/reent.h:458,
                 from /home/joagz/esp/esp-idf/components/newlib/platform_include/sys/reent.h:22,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/stdio.h:60,
                 from /home/joagz/esp/esp-idf/components/esp_common/include/esp_err.h:10,
                 from /home/joagz/esp/esp-idf/components/driver/ledc/include/driver/ledc.h:9,
                 from /home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:1:
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/build/config/sdkconfig.h:487: note: this is the location of the previous definition
  487 | #define CONFIG_LOG_MAXIMUM_LEVEL 3
      | 
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c: In function 'configure_ledc_timer':
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:75:9: error: request for member 'clk_cfg' in something not a structure or union
   75 |         .clk_cfg          = LEDC_AUTO_CLK
      |         ^
make[2]: *** [esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/build.make:79: esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5631: esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
